# Civilization

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
src/: __init__.py
src/ai/: __init__.py  ai_controller.py  ai_strategies.py  ai_tactics.py  utility_functions.py
src/core/: __init__.py  game.py  game_state.py  settings.py  turn_manager.py
src/data/: __init__.py  resource_data.py  tech_data.py  unit_data.py
src/entities/: __init__.py  city.py  civilization.py  unit.py  unit_types.py
src/map/: __init__.py  grid.py  map_generator.py  pathfinding.py  tile.py
src/systems/: combat_system.py  resource_system.py  tech_tree.py
src/ui/: __init__.py  camera.py  input_handler.py  renderer.py
tests/: conftest.py  test_ai_behavior.py  test_combat_system.py  test_integration.py  test_map_generation.py  test_pathfinding.py  test_tech_tree.py
